--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             zoomControl:false, maxZoom:28, minZoom:1
         }).fitBounds([[-1.2194044146719638,100.16068239892422],[-0.5105007555626958,101.4787121306166]]);
         var hash = new L.Hash(map);
-        map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
+        map.attributionControl.setPrefix('<a href="https://kab-solok.atrbpn.go.id">Seksi Pengadaan Tanah dan Pengembangan Kantor Pertanahan Kab. Solok</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
         // remove popup's row if "visible-with-data"
         function removeEmptyRowsFromPopupContent(content, feature) {
